Modularized classes, added comments, simplified logic for everything apart from Systems, testing should be possible soon